--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,21 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h2.ui.header {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: 18px;
+  letter-spacing: 0.5rem;
+  -webkit-font-smoothing: antialiased;
+  line-height: 1;
   color: white;
+  font-size: 1.4rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ui.circular.segment {
+  display: table-cell;
+  padding: 2rem 1rem;
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 500em;
+  padding-top: 5%;
+  margin: 0;
 }
